# svend_git

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  DSW_gaps.md  README.md  STANDARD.md  gunicorn.conf.py  kjerne  log.md  manage.py  new_flows.md  pyproject.toml  security_debt.md  svend-whitepaper-insight-spine.html
services/svend/web/: .coverage  .coveragerc  .env.example  .gitignore  Caddyfile  TECH_DEBT.md  backup_db.sh  conftest.py  coverage.json  gunicorn.conf.py  manage.py  prod_checklist.yaml  pyproject.toml  run_purge.sh  seed_enrich.py  start_prod.sh  start_tempora.sh  svend-backup.service  svend-backup.timer  svend-purge.service  svend-purge.timer  svend.service
services/svend/web/a3/: apps.py
services/svend/web/accounts/: __init__.py  admin.py  api_key_auth.py  apps.py  billing.py  constants.py  middleware.py  models.py  permissions.py  privacy_tasks.py  privacy_urls.py  privacy_views.py  tests.py  tests_api_keys.py  tests_coverage.py  tests_privacy.py  urls.py
services/svend/web/agents_api/: __init__.py  a3_urls.py  a3_views.py  action_urls.py  action_views.py  analysis_urls.py  analysis_views.py  anytime_valid.py  apps.py  audit_bugfix_tests.py  autopilot_views.py  base_tool_model.py  bayes_core.py  bayes_doe.py  cache.py  calibration.py  capa_urls.py  capa_views.py  causal_discovery.py  ce_urls.py  ce_views.py  clustering.py  commitment_notifications.py  commitment_tasks.py  conformal.py  drift_detection.py  dsw_engine_tests.py  dsw_urls.py  dsw_views.py  embeddings.py  engine_tests.py  esig_tests.py  evidence_bridge.py  evidence_weights.py  experimenter_urls.py  experimenter_views.py  fmea_urls.py  fmea_views.py  forecast_urls.py  forecast_views.py  (+82 more)
services/svend/web/api/: __init__.py  apps.py  auth.py  blog_views.py  experiments.py  internal_views.py  landing_views.py  models.py  serializers.py  tasks.py  tests.py  tests_internal_crud.py  tests_internal_dashboard.py  tests_views_extended.py  training_views.py  urls.py  views.py  whitepaper_views.py
services/svend/web/chat/: __init__.py  admin.py  models.py  tests.py  views.py
services/svend/web/core/: admin.py  bayesian.py  encrypted_storage.py  encryption.py  serializers.py  synara.py  tests.py  tests_views.py  urls.py  views.py
services/svend/web/doe/: models.py  views.py
services/svend/web/files/: admin.py  apps.py  models.py  tests.py  tests_views.py  urls.py  views.py
services/svend/web/fmea/: models.py
services/svend/web/forge/: __init__.py  admin.py  apps.py  models.py  serializers.py  storage.py  tasks.py  tests.py  urls.py  views.py
services/svend/web/graph/: integrations.py  models.py  service.py  synara_adapter.py  tests.py  tests_integrations.py  tests_qms.py  tests_synara.py  urls.py  views.py
services/svend/web/hoshin/: apps.py  models.py
services/svend/web/inference/: __init__.py  flywheel.py  pipeline.py
services/svend/web/learn/: models.py  views.py
services/svend/web/loop/: admin.py  apps.py  models.py  readiness.py  report_engine.py  services.py  urls.py  views.py
services/svend/web/notebooks/: models.py
services/svend/web/notifications/: apps.py  email.py  email_service.py  helpers.py  models.py  tasks.py  tests.py  tests_webhooks.py  token_urls.py  token_views.py  urls.py  views.py  webhook_delivery.py  webhook_views.py
services/svend/web/ops/: backup_db.sh  deploy.sh  fail2ban-svend-http.conf  harden.sh  integrity_check.sh  migrate_secrets.sh  start_prod.sh  start_tempora.sh  svend-backup.service  svend-integrity.service  svend-purge.service  svend.service  tempora.service
services/svend/web/qms/: views.py
services/svend/web/qms_core/: apps.py  permissions.py
services/svend/web/rca/: models.py
services/svend/web/safety/: apps.py  models.py  tests.py  urls.py  views.py
services/svend/web/simulators/: models.py
services/svend/web/svend/: __init__.py  settings.py  urls.py
services/svend/web/svend_config/: __init__.py  config.py
services/svend/web/syn/: __init__.py
services/svend/web/templates/: 404.html  5s_playbook.html  a3.html  a3_print.html  analysis_workbench.html  app_main.html  base_app.html  base_crud.html  base_dashboard.html  base_guest.html  base_loop.html  base_qms.html  base_workspace.html  blog_detail.html  blog_list.html  calculators.html  calculators.html.bak  ce_matrix.html  chat.html  classical_vs_bayesian_spc.html  coder.html  compliance.html  continuous_improvement.html  dashboard.html  dashboard_new.html  doe_run_card.html  dsw.html  education_partnerships.html  experimenter.html  fmea.html  forecast.html  forge.html  front_page.html  graph_map.html  guest_invalid.html  harada.html  hoshin.html  hoshin_playbook.html  hypotheses.html  internal_dashboard.html  (+61 more)
services/svend/web/tempora/: __init__.py  (+11 more)
(+2889 files in other folders)
