[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svend"
version = "0.1.0"
description = "Svend - Tool-augmented reasoning system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "torch>=2.0",
    "tiktoken>=0.5",
    "tempora-scheduler",  # Distributed task scheduling (github.com/ewolters/tempora)
    "cryptography>=41.0",
    "dj-database-url>=2.1",
    # Synara infrastructure dependencies
    "PyJWT>=2.8",               # JWT validation (tenant middleware)
    "structlog>=24.2",          # Structured logging
    "python-json-logger>=2.0",  # JSON log formatting
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "ruff>=0.3",
]
prod = [
    "gunicorn>=21.0",
    "psycopg2-binary>=2.9",
]

[tool.ruff]
# STY-001 §9.1, INIT-010 FEAT-078
line-length = 120
target-version = "py310"
exclude = [
    "migrations",
    "static",
    "staticfiles",
    "node_modules",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by line-length setting
]

[tool.ruff.lint.isort]
known-first-party = ["syn", "api", "core", "accounts", "agents_api", "forge", "chat", "workbench", "files", "svend"]
